add fluentbit sidecar

--- a/hkube/templates/api-server-deployment.yaml
+++ b/hkube/templates/api-server-deployment.yaml
@@ -23,6 +23,7 @@ spec:
         release: api-server
         group: {{ .Values.labels.group.value }}
     spec:
+      serviceAccountName: api-server-serviceaccount
 {{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
         - name: {{ .Values.global.image_pull_secret.name }}
@@ -34,6 +35,7 @@ spec:
       volumes:
         - name: uploads
           emptyDir: {}
+{{ include "hkube.fluent_bit.volume" . | indent 8 }}
 {{- if eq .Values.env.default_storage "fs" }}
         - name: storage-volume
           persistentVolumeClaim:
@@ -63,6 +65,7 @@ spec:
           volumeMounts:
             - name: uploads
               mountPath: /hkube/api-server/uploads
+{{ include "hkube.fluent_bit.volumemount" . | indent 12 }}
 {{- if eq .Values.env.default_storage "fs" }}
             - name: storage-volume
               mountPath: {{ .Values.global.storage.fs.base_directory | quote}}
@@ -73,6 +76,7 @@ spec:
             - containerPort: {{ index .Values "api_server" "env" "port" }}
               protocol: TCP
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: METRICS_PORT
               valueFrom:
                 configMapKeyRef:
@@ -164,3 +168,4 @@ spec:
                 configMapKeyRef:
                   name: api-server-configmap
                   key: INGRESS_PREFIX
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
