--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -51,6 +51,7 @@ spec:
           ports:
             - containerPort: {{ .Values.task_executor.env.metric_port }}
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -135,3 +136,6 @@ spec:
               value: {{ .Values.task_executor.env.default_quota_mem | quote}}
             - name: DEFAULT_QUOTA_GPU
               value: {{ .Values.task_executor.env.default_quota_gpu | quote}}             
+{{ include "hkube.fluent_bit.volumemount_full" . | indent 10 }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
+{{ include "hkube.fluent_bit.volume_full" . | indent 6 }}
