--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -56,6 +56,7 @@ spec:
               containerPort: {{ index .Values "algorithm_operator" "env" "metric_port" }}
               protocol: TCP
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -142,4 +143,6 @@ spec:
                   name: s3-secret
                   key: awsEndpointUrl
 {{- end }}              
-
+{{ include "hkube.fluent_bit.volumemount_full" . | indent 10 }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
+{{ include "hkube.fluent_bit.volume_full" . | indent 6 }}
