--- a/hkube/templates/job-cleaner-deployment.yaml
+++ b/hkube/templates/job-cleaner-deployment.yaml
@@ -53,6 +53,7 @@ spec:
           resources: {}
 {{- end }}     
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -77,4 +78,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-
+{{ include "hkube.fluent_bit.volumemount_full" . | indent 10 }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
+{{ include "hkube.fluent_bit.volume_full" . | indent 6 }}
