--- a/hkube/templates/trigger-service-deployment.yaml
+++ b/hkube/templates/trigger-service-deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: trigger-service
         group: {{ .Values.labels.group.value }}
     spec:
+      serviceAccountName: trigger-service-serviceaccount
 {{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
         - name: {{ .Values.global.image_pull_secret.name }}
@@ -41,6 +42,7 @@ spec:
           ports:
             - containerPort: {{ .Values.trigger_service.env.metric_port }}
           env:
+{{ include "hkube.fluent_bit.environment" . | indent 12 }}
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
@@ -64,3 +66,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+{{ include "hkube.fluent_bit.volumemount_full" . | indent 10 }}
+{{ include "hkube.fluent_bit.sidecar" . | indent 8 }}
+{{ include "hkube.fluent_bit.volume_full" . | indent 6 }}
