--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,11 @@ on:
         default: master
       TAG:
         description: release-manager tag to get
-        required: no
+        required: false
+      FROZEN_VERSION:
+        description: if 'true' creates a frozen version. If false creates a dev version
+        required: true
+        default: 'false'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -47,6 +51,8 @@ jobs:
         run: ./package.sh
         env:
           TAG: '${{ github.event.client_payload.TAG || github.event.inputs.TAG }}'
+          BRANCH: '${{ github.event.client_payload.BRANCH || github.event.inputs.BRANCH }}'
+          FROZEN_VERSION: '${{ github.event.client_payload.FROZEN_VERSION || github.event.inputs.FROZEN_VERSION }}'
       - name: trigger
         id: trigger
         uses: octokit/request-action@v2.x
