--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -60,6 +60,29 @@ global:
     use_regex: true
     requireTls: false
     maxBodySize: 500m
+  sidecars:
+    fluent_bit:
+      enable: false
+      config:
+        name: fluent-bit-cm
+        create_cm: true
+        log_file: "*.log"
+        mount_path: /mnt/log
+        es:
+          url: ""
+          port: "9200"
+          tls: "Off"
+          tls_verify: "Off"
+          logStashPrefix: "hkube-"
+          user: ""
+          password: ""
+      image: # +doc-gen:ignore
+        repository: fluent/fluent-bit
+        tag: "1.8.3"
+      resources:
+        limits:
+          cpu: 100m
+          memory: 200Mi
 env:
   # storage mode. can be s3 or fs. Set global.storage.fs or global.storage.s3 accordingly
   default_storage: s3
@@ -138,7 +161,7 @@ metrics:
     release: metrics
   grafanaDashboardLabel:
     grafana_dashboard: '1'
-systemversion: v1.3.163
+systemversion: 1.3.163-fluent-for-1-3.1181211352
 build_secret:
 # docker registry for algorithm builds. defaults to docker.io
   docker_registry: ''
@@ -184,7 +207,7 @@ algorithm_operator:
     node_wrapper_version: ''
   image: # +doc-gen:ignore
     repository: hkube/algorithm-operator
-    tag: v1.3.18
+    tag: v1.3.18-fluent-for-1-3-1181211352
   ingress: # +doc-gen:ignore
     enabled: false
     path: /hkube/algorithm-operator
@@ -208,7 +231,7 @@ algorithm_operator:
 algorithm_queue: # +doc-gen:ignore
   image:
     repository: hkube/algorithm-queue
-    tag: v1.3.9
+    tag: v1.3.9-fluent-for-1-3-1181211352
 algorithm_queue_svc: # +doc-gen:ignore
   env:
     metric_port: '3000'
@@ -225,7 +248,7 @@ api_server: # +doc-gen:ignore
     pipeline_driver_mem: '512'
   image:
     repository: hkube/api-server
-    tag: v1.3.45
+    tag: v1.3.45-fluent-for-1-3-1181211352
   ingress:
     enabled: true
     path: /hkube/api-server
@@ -279,7 +302,7 @@ clean_old_jobs: # +doc-gen:ignore
     failureThreshold: 3
   image:
     repository: hkube/clean-old-jobs
-    tag: v1.3.1
+    tag: v1.3.2
   resources:
     requests:
       cpu: 100m
@@ -331,7 +354,7 @@ monitor_server: # +doc-gen:ignore
     jaeger_query_service_port: ''
   image:
     repository: hkube/monitor-server
-    tag: v1.3.7
+    tag: v1.3.9
   ingress:
     enabled: true
     path: /hkube/monitor-server
@@ -356,7 +379,7 @@ pipeline_driver: # +doc-gen:ignore
     storageResultsThreshold: '100Ki'
   image:
     repository: hkube/pipeline-driver
-    tag: v1.3.33
+    tag: v1.3.33-fluent-for-1-3-1181211352
   service:
     type: ClusterIP
 pipeline_driver_queue: # +doc-gen:ignore
@@ -366,7 +389,7 @@ pipeline_driver_queue: # +doc-gen:ignore
     check_queue_interval: '500'
   image:
     repository: hkube/pipeline-driver-queue
-    tag: v1.3.6
+    tag: v1.3.6-fluent-for-1-3-1181211352
   ingress:
     enabled: false
     path: /hkube/pipeline-driver-queue
@@ -397,7 +420,7 @@ resource_manager: # +doc-gen:ignore
     prometheus_endpoint: 'http://monitoring-prometheus-server.monitoring:9090/api/v1'
   image:
     repository: hkube/resource-manager
-    tag: v1.3.6
+    tag: v1.3.6-fluent-for-1-3-1181211352
   service:
     type: ClusterIP
   resources:
@@ -487,7 +510,7 @@ task_executor:
     use_resource_limits: false
   image: # +doc-gen:ignore
     repository: hkube/task-executor
-    tag: v1.3.27
+    tag: v1.3.27-fluent-for-1-3-1181211352
   service: # +doc-gen:ignore
     type: ClusterIP
   # Compute resources required for algorithm-operator
@@ -502,7 +525,7 @@ trigger_service: # +doc-gen:ignore
     metric_port: '3000'
   image:
     repository: hkube/trigger-service
-    tag: v1.3.8
+    tag: v1.3.8-fluent-for-1-3-1181211352
   service:
     type: ClusterIP
   resources:
@@ -514,7 +537,7 @@ worker: # +doc-gen:ignore
     metric_port: '3000'
   image:
     repository: hkube/worker
-    tag: v1.3.25
+    tag: v1.3.25-fluent-for-1-3-1181211352
   metrics:
     port: 3001
   service:
@@ -524,7 +547,7 @@ caching_service: # +doc-gen:ignore
     port: '9005'
   image:
     repository: hkube/caching-service
-    tag: v1.3.12
+    tag: v1.3.12-fluent-for-1-3-1181211352
   service:
     type: ClusterIP
   resources:
@@ -534,7 +557,7 @@ caching_service: # +doc-gen:ignore
 algorithm_builder: # +doc-gen:ignore
   image:
     repository: hkube/algorithm-builder
-    tag: v1.3.86
+    tag: v1.3.86-fluent-for-1-3-1181211352
   resources:
     requests:
       cpu: 100m
