--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,6 +58,8 @@ jobs:
         env:
           BRANCH: '${{ github.event.client_payload.BRANCH || github.event.inputs.BRANCH }}'
       - run: |
+          git status
+          npm version
           npm version patch -m "$(git log -1 --pretty=%B) .... bump version"
           echo CHART_TAG=$(git describe --abbrev=0) >> $GITHUB_ENV
       - run: git push --follow-tags
