--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "helm",
   "version": "1.3.229",
-  "description": "Installing and Deleteting hkube with helm charts",
+  "description": "Installing and Deleting hkube with helm charts",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
