--- a/hkube/templates/algorithm-builder-role.yaml
+++ b/hkube/templates/algorithm-builder-role.yaml
@@ -24,6 +24,9 @@ rules:
 - apiGroups: [""]
   resources: ["configmaps"]
   verbs: ["get"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
