--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -2,13 +2,13 @@ global:
   # kubernetes cluster domain name
   clusterName: cluster.local
   # private registry to use
-  registry: ''
+  registry: ""
   # private registry namespace for pulling images in builds
   registry_namespace: hkube
   # private registry username for pulling images
-  registry_username: ''
+  registry_username: ""
   # private registry password for pulling images
-  registry_password: ''
+  registry_password: ""
   # private registry insecure (http) for pulling base image in builds
   registry_insecure: false
   # private registry with self signed certificate for pulling base image in builds
@@ -21,7 +21,7 @@ global:
   # If false, will not set resource request and limits on hkube pods. If true will set the values for each pod
   resources_enable: false
   storage:
-  # encoding for storage. can be msgpack, bson, json
+    # encoding for storage. can be msgpack, bson, json
     encoding: msgpack
     maxCacheSize: 500
     storageResultsThreshold: 100Ki # +doc-gen:ignore
@@ -29,17 +29,17 @@ global:
       pvc:
         name: hkube-storage
         capacity: 10Gi
-        storage_class: '-'
+        storage_class: "-"
       dev_pvc:
         name: hkube-dev-sources
         capacity: 10Gi
-        storage_class: ''
+        storage_class: ""
       base_directory: /hkubedata
     s3:
       # s3 access and secret key. If using internal minio, must match minio.accessKey and secretKey
       access_key: hkubeminiokey
       secret_key: hkubeminiosecret
-      url: 'http://hkube-minio:9000'
+      url: "http://hkube-minio:9000"
   discovery: # +doc-gen:ignore
     encoding: msgpack
     port: 9020
@@ -54,8 +54,8 @@ global:
   # run worker pods as privileged containers. Makes log aggregation easier
   isPrivileged: true
   ingress:
-    hostname: ''
-    prefix: ''
+    hostname: ""
+    prefix: ""
     # set to false if using nginx-ingress-controller prior to 0.21
     use_regex: true
     requireTls: false
@@ -94,7 +94,7 @@ image:
   pullPolicy: IfNotPresent
 labels: # +doc-gen:ignore
   core:
-    value: 'true'
+    value: "true"
   group:
     value: hkube
 etcd:
@@ -103,7 +103,7 @@ etcd:
   replicas: 3
   persistentVolume:
     enabled: true
-    storageClass: ''
+    storageClass: ""
     storage: 10Gi
 redis-ha:
   enable: true
@@ -147,7 +147,7 @@ jaeger:
       cluster_size: 1
       cluster_domain: cluster.local
   # optional external jaeger agent address. leave blank for defaults
-  external_agent_address: ''
+  external_agent_address: ""
 nginx-ingress:
   # install nginx-ingress-controller with hkube
   enable: false
@@ -168,21 +168,21 @@ minio:
   secretKey: hkubeminiosecret
   persistence:
     enabled: true
-    storageClass: ''
+    storageClass: ""
   serviceAccount: # +doc-gen:ignore
     create: false
 gitea:
   enable: true
   service:
     http:
-      port: '3000'
+      port: "3000"
   gitea:
     config:
       repository:
         ENABLE_PUSH_CREATE_USER: true
     admin:
       username: hkube
-      password: '123456'
+      password: "123456"
       email: "hkube@hkube.io"
   postgresql:
     securityContext:
@@ -197,41 +197,41 @@ metrics:
   serviceMonitorSelector:
     release: metric
   grafanaDashboardLabel:
-    grafana_dashboard: '1'
+    grafana_dashboard: "1"
 systemversion: v2.2.1
 build_secret:
-# docker registry for algorithm builds. defaults to docker.io
-  docker_registry: ''
-# docker registry namespace for algorithm builds. defaults to username
-  docker_namespace: ''
-# docker registry username for algorithm builds.
-  docker_username: ''
-# docker registry password for algorithm builds.
-  docker_password: ''
-# docker registry is insecure for algorithm builds.
+  # docker registry for algorithm builds. defaults to docker.io
+  docker_registry: ""
+  # docker registry namespace for algorithm builds. defaults to username
+  docker_namespace: ""
+  # docker registry username for algorithm builds.
+  docker_username: ""
+  # docker registry password for algorithm builds.
+  docker_password: ""
+  # docker registry is insecure for algorithm builds.
   docker_registry_insecure: false
-# docker registry has self signed certificate for algorithm builds.
+  # docker registry has self signed certificate for algorithm builds.
   docker_registry_skip_tls_verify: false
-# npm registry for algorithm builds. Defaults to npmjs.com
-  npm_registry: ''
-# npm registry token for algorithm builds. Mutually exclusive with npm_user and npm_password
-  npm_token: ''
-# npm registry user for algorithm builds. Mutually exclusive with npm_token
-  npm_user: ''
-# npm registry password for algorithm builds. Mutually exclusive with npm_token
-  npm_password: ''
-# pip registry for algorithm builds. Defaults to pypi.org
-  pip_registry: ''
-# pip registry token for algorithm builds. Defaults to pypi.org
-  pip_token: ''
-  maven_registry: ''
-  maven_token: ''
-  maven_user: ''
+  # npm registry for algorithm builds. Defaults to npmjs.com
+  npm_registry: ""
+  # npm registry token for algorithm builds. Mutually exclusive with npm_user and npm_password
+  npm_token: ""
+  # npm registry user for algorithm builds. Mutually exclusive with npm_token
+  npm_user: ""
+  # npm registry password for algorithm builds. Mutually exclusive with npm_token
+  npm_password: ""
+  # pip registry for algorithm builds. Defaults to pypi.org
+  pip_registry: ""
+  # pip registry token for algorithm builds. Defaults to pypi.org
+  pip_token: ""
+  maven_registry: ""
+  maven_token: ""
+  maven_user: ""
 # node selector for hkube containers.
 nodeSelector: {}
 algorithm_operator:
   env: # +doc-gen:ignore
-    metric_port: '3000'
+    metric_port: "3000"
     builder_cpu: 0.1
     interval: 1000
     algorithm_builder_builder_memory: 1024
@@ -244,8 +244,8 @@ algorithm_operator:
     pipeline_drivers_concurrency_limit: 5
     boards_timeout: 10800
     producer_update_interval: 200
-    python_wrapper_version: ''
-    node_wrapper_version: ''
+    python_wrapper_version: ""
+    node_wrapper_version: ""
   image: # +doc-gen:ignore
     repository: hkube/algorithm-operator
     tag: v2.2.1
@@ -275,7 +275,7 @@ algorithm_queue: # +doc-gen:ignore
     tag: v2.2.1
 algorithm_queue_svc: # +doc-gen:ignore
   env:
-    metric_port: '3000'
+    metric_port: "3000"
   service:
     type: ClusterIP
 algorunner: # +doc-gen:ignore
@@ -289,10 +289,10 @@ api_gateway:
 api_server: # +doc-gen:ignore
   env:
     base_url_path: /hkube/api-server
-    metric_port: '3001'
-    port: '3000'
-    pipeline_driver_cpu: '0.2'
-    pipeline_driver_mem: '512'
+    metric_port: "3001"
+    port: "3000"
+    pipeline_driver_cpu: "0.2"
+    pipeline_driver_mem: "512"
     maxBodySize: 500mb
     rate_limit_ms: 1000
     rate_limit_max: 5
@@ -312,11 +312,11 @@ datasources_service: # +doc-gen:ignore
   storage:
     pvc:
       capacity: 50Gi
-      storage_class: ''
+      storage_class: ""
   env:
     base_url_path: /hkube/datasources-service
-    metric_port: '3001'
-    port: '3005'
+    metric_port: "3001"
+    port: "3005"
   image:
     repository: hkube/datasources-service
     tag: v2.2.1
@@ -331,7 +331,7 @@ datasources_service: # +doc-gen:ignore
       memory: 512Mi
 artifacts_registry: # +doc-gen:ignore
   env:
-    port: '8081'
+    port: "8081"
   image:
     repository: hkube/artifacts-registry
     tag: v2.2.1
@@ -351,45 +351,45 @@ busybox: # +doc-gen:ignore
 gc_service: # +doc-gen:ignore
   # all maxAge are in minutes
   env:
-    hkube_log_level: 'info'
+    hkube_log_level: "info"
     rest_port: 7000
     base_url_path: /hkube/gc-service
 
     # datasource
-    datasource_cron: '0 0 * * *'
+    datasource_cron: "0 0 * * *"
     datasource_enabled: true
     datasource_max_age: 2880
     datasource_base_dir: "/hkube/datasources-storage"
-    datasource_folder_in_use: 'dataSources-in-use'
+    datasource_folder_in_use: "dataSources-in-use"
 
     # debug
-    debug_cron: '*/2 * * * *'
+    debug_cron: "*/2 * * * *"
     debug_enabled: true
     debug_max_age: 10
 
     # etcd
-    etcd_cron: '0 1 * * *'
+    etcd_cron: "0 1 * * *"
     etcd_enabled: true
     etcd_max_age: 1440
 
     # gateway
-    gateway_cron: '*/2 * * * *'
+    gateway_cron: "*/2 * * * *"
     gateway_enabled: true
     gateway_max_age: 0.166
 
     # jobs
-    jobs_cron: '*/1 * * * *'
+    jobs_cron: "*/1 * * * *"
     jobs_enabled: true
     jobs_completed_max_age: 1
     jobs_failed_max_age: 1
     jobs_pending_max_age: 1
 
     # pipelines
-    pipelines_cron: '*/5 * * * *'
+    pipelines_cron: "*/5 * * * *"
     pipelines_enabled: true
 
     # redis
-    redis_cron: '20 1 * * *'
+    redis_cron: "20 1 * * *"
     redis_enabled: true
     redis_max_age: 7200
 
@@ -446,12 +446,12 @@ monitor_server: # +doc-gen:ignore
   env:
     port: 30010
     log_external_requests: false
-    elasticsearch_service_url: ''
-    elasticsearch_logs_index: 'logstash-*'
-    elasticsearch_logs_doc_type: '_doc'
+    elasticsearch_service_url: ""
+    elasticsearch_logs_index: "logstash-*"
+    elasticsearch_logs_doc_type: "_doc"
     logs_view_source: k8s
-    jaeger_query_service_host: ''
-    jaeger_query_service_port: ''
+    jaeger_query_service_host: ""
+    jaeger_query_service_port: ""
     show_streaming_metrics: false
     max_display_batch_size: 10
   image:
@@ -469,8 +469,8 @@ monitor_server: # +doc-gen:ignore
       memory: 512Mi
 pipeline_driver: # +doc-gen:ignore
   env:
-    metric_port: '3001'
-    storageResultsThreshold: '100Ki'
+    metric_port: "3001"
+    storageResultsThreshold: "100Ki"
   image:
     repository: hkube/pipeline-driver
     tag: v2.2.1
@@ -478,9 +478,9 @@ pipeline_driver: # +doc-gen:ignore
     type: ClusterIP
 pipeline_driver_queue: # +doc-gen:ignore
   env:
-    hkube_log_level: 'info'
-    metric_port: '3000'
-    check_queue_interval: '500'
+    hkube_log_level: "info"
+    metric_port: "3000"
+    check_queue_interval: "500"
   image:
     repository: hkube/pipeline-driver-queue
     tag: v2.2.1
@@ -504,14 +504,14 @@ resource_manager: # +doc-gen:ignore
     timeoutSeconds: 1
     failureThreshold: 3
   env:
-    algorithms_threshold_cpu: '0.9'
-    algorithms_threshold_mem: '0.9'
-    driver_threshold_cpu: '0.1'
-    driver_threshold_mem: '1'
-    hkube_log_level: 'info'
-    interval: '1000'
-    metric_port: '3000'
-    prometheus_endpoint: 'http://monitoring-prometheus-server.monitoring:9090/api/v1'
+    algorithms_threshold_cpu: "0.9"
+    algorithms_threshold_mem: "0.9"
+    driver_threshold_cpu: "0.1"
+    driver_threshold_mem: "1"
+    hkube_log_level: "info"
+    interval: "1000"
+    metric_port: "3000"
+    prometheus_endpoint: "http://monitoring-prometheus-server.monitoring:9090/api/v1"
   image:
     repository: hkube/resource-manager
     tag: v2.2.1
@@ -523,18 +523,18 @@ resource_manager: # +doc-gen:ignore
       memory: 512Mi
 simulator: # +doc-gen:ignore
   env:
-    hkube_log_level: 'info'
+    hkube_log_level: "info"
     port: 9050
     monitor_backend_path: /hkube/monitor-server/
     monitor_backend_path_socketio: /hkube/monitor-server/socket.io
-    monitor_backend_use_location: 'true'
-    monitor_backend_host: ''
-    monitor_backend_port: ''
-    board_host: ''
-    board_port: ''
+    monitor_backend_use_location: "true"
+    monitor_backend_host: ""
+    monitor_backend_port: ""
+    board_host: ""
+    board_port: ""
     board_path: /hkube/board
-    board_use_location: 'true'
-    is_secure: ''
+    board_use_location: "true"
+    is_secure: ""
   image:
     repository: hkube/simulator
     tag: v2.2.1
@@ -561,7 +561,7 @@ task_executor:
     timeoutSeconds: 1
     failureThreshold: 3
   env:
-    metric_port: '3000' # +doc-gen:ignore
+    metric_port: "3000" # +doc-gen:ignore
     worker_socket_max_payload_bytes: 1000000000
     worker_algorithm_start_timeout_ms: 300000
     worker_algorithm_encoding: bson # +doc-gen:ignore
@@ -574,7 +574,7 @@ task_executor:
     # if true, sets resource requests on worker container
     resources_enable: false
     # task executor internal processing interval in MS
-    interval: '1000'
+    interval: "1000"
     log_external_requests: false # +doc-gen:ignore
     # set to the number of CPUs in the cluster (or quota) when running on openshift
     default_quota_cpu: 30
@@ -600,7 +600,7 @@ thirdparty: # +doc-gen:ignore
   enabled: true
 trigger_service: # +doc-gen:ignore
   env:
-    metric_port: '3000'
+    metric_port: "3000"
   image:
     repository: hkube/trigger-service
     tag: v2.2.1
@@ -612,7 +612,7 @@ trigger_service: # +doc-gen:ignore
       memory: 256Mi
 worker: # +doc-gen:ignore
   env:
-    metric_port: '3000'
+    metric_port: "3000"
   image:
     repository: hkube/worker
     tag: v2.2.1
@@ -634,6 +634,12 @@ algorithm_debug: # +doc-gen:ignore
     port: 3005
   image:
     repository: hkube/algorithm-debug
+    tag: v2.2.1
+algorithm_output: # +doc-gen:ignore
+  env:
+    port: 3005
+  image:
+    repository: hkube/algorithm-output
     tag: v2.2.1
   service:
     type: ClusterIP
@@ -667,7 +673,7 @@ algorithm_example_python: # +doc-gen:ignore
     tag: v2.2.1
 etcd_defrag: # +doc-gen:ignore
   enable: true
-  pattern: '0 0 * * *'
+  pattern: "0 0 * * *"
   env:
     etcd_name: etcd
     etcd_protocol: http
