--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -198,7 +198,7 @@ metrics:
     release: metric
   grafanaDashboardLabel:
     grafana_dashboard: '1'
-systemversion: 2.2.3-optimizer.1381067774
+systemversion: v2.2.3
 
 build_secret:
 # docker registry for algorithm builds. defaults to docker.io
@@ -651,10 +651,10 @@ algorithm_optimizer: # +doc-gen:ignore
   env:
     port: 3005
   image:
-    repository: hkube/algorithm_optimizer
-    tag: v2.2.1-optimizer-1381067774
+    repository: hkube/algorithm-optimizer
+    tag: v2.2.1
   service:
-    type: ClusterIP
+    type: ClusterIP    
 algorithm_builder: # +doc-gen:ignore
   image:
     repository: hkube/algorithm-builder
