--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -309,7 +309,7 @@ api_server: # +doc-gen:ignore
     requests:
       cpu: 100m
       memory: 512Mi
-dsmetrics_storage: # +doc-gen:ignore
+datasciencemetrics_storage: # +doc-gen:ignore
     pvc:
       capacity: 50Gi
       storage_class: ''
