--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -432,6 +432,10 @@ tensorboard: # +doc-gen:ignore
   image:
     repository: hkube/tensorboard
     tag: v2.2.1
+optuna-dashboard: # +doc-gen:ignore
+  image:
+    repository: hkube/optuna-dashboard
+    tag: v2.2.1    
 delete_deployment_and_jobs: # +doc-gen:ignore
   image:
     repository: hkube/del-dep-and-jobs
