--- a/hkube/requirements.yaml
+++ b/hkube/requirements.yaml
@@ -26,4 +26,8 @@ dependencies:
   - name: gitea
     version: "2.1.3006"
     repository: "https://hkube.io/helm/"
-    condition: gitea.enable    
+    condition: gitea.enable   
+  - name: jupyterhub
+    version: "1.1.3000"
+    repository: "https://hkube.io/helm/"
+    condition: jupyterhub.enable
