--- a/hkube/templates/algorithm-operator-deployment.yaml
+++ b/hkube/templates/algorithm-operator-deployment.yaml
@@ -55,18 +55,11 @@ spec:
             - name: http
               containerPort: {{ index .Values "algorithm_operator" "env" "metric_port" }}
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: algorithm-operator-configmap
           env:
 {{ include "hkube.fluent_bit.environment" . | indent 12 }}
-            - name: NODE_ENV
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: NODE_ENV
-            - name: METRICS_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: METRICS_PORT
 {{- if .Values.global.isPrivileged }}            
             - name: JAEGER_AGENT_SERVICE_HOST
               valueFrom:
@@ -80,56 +73,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            - name: ALGORITHM_QUEUE_CONCURRENCY_LIMIT
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: ALGORITHM_QUEUE_CONCURRENCY_LIMIT
-            - name: PIPELINE_DRIVERS_AMOUNT
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: PIPELINE_DRIVERS_AMOUNT
-            - name: PIPELINE_DRIVERS_CONCURRENCY_LIMIT
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: PIPELINE_DRIVERS_CONCURRENCY_LIMIT
-            - name: DEFAULT_STORAGE
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: DEFAULT_STORAGE
-            - name: STORAGE_ENCODING
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: STORAGE_ENCODING                  
-            - name: BOARDS_TIMEOUT
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: BOARDS_TIMEOUT
-            - name: CLUSTER_NAME
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: CLUSTER_NAME
-            - name: IS_PRIVILEGED
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: IS_PRIVILEGED
-            - name: BUILD_MODE
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: BUILD_MODE
-            - name: INTERVAL_MS
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: INTERVAL_MS
             - name: ALGORITHM_BUILDER_BUILDER_CPU
               value: {{ .Values.algorithm_operator.env.algorithm_builder_builder_cpu | quote}}
             - name: ALGORITHM_BUILDER_BUILDER_MEMORY
@@ -140,13 +83,7 @@ spec:
               value: {{ .Values.algorithm_operator.env.algorithm_builder_main_memory | quote}}
             - name: RESOURCES_ENABLE
               value: {{ .Values.algorithm_operator.env.resources_enable | quote}}
-{{- if eq .Values.env.default_storage "fs" }}
-            - name: BASE_FS_ADAPTER_DIRECTORY
-              valueFrom:
-                configMapKeyRef:
-                  name: algorithm-operator-configmap
-                  key: BASE_FS_ADAPTER_DIRECTORY
-{{- else if eq .Values.env.default_storage "s3" }}
+{{- if eq .Values.env.default_storage "s3" }}
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
