--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -193,6 +193,7 @@ gitea:
     securityContext:
       enabled: false
 jupyterhub:
+  enable: true
   hub:
     baseUrl: /hkube/jupyterhub
     allowNamedServers: true
@@ -204,6 +205,9 @@ jupyterhub:
           - hkube
   ingress:
     enabled: true
+  proxy:
+    service:
+      type: ClusterIP
 
 metrics:
   serviceMonitorSelector:
@@ -261,7 +265,7 @@ algorithm_operator:
     node_wrapper_version: ''
   image: # +doc-gen:ignore
     repository: hkube/algorithm-operator
-    tag: v2.2.2-jupyter-1472255053
+    tag: v2.2.2-c
   ingress: # +doc-gen:ignore
     enabled: false
     path: /hkube/algorithm-operator
