--- a/hkube/templates/dsmetrics-storage.yaml
+++ b/hkube/templates/dsmetrics-storage.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.optuna_dashboard.enabled }}
 {{- if eq .Values.datasciencemetrics_storage.pvc.storage_class "-" }}
 apiVersion: v1
 kind: PersistentVolume
@@ -48,5 +49,5 @@ spec:
 {{- else if .Values.datasciencemetrics_storage.pvc.storage_class }}
   storageClassName: {{ .Values.datasciencemetrics_storage.pvc.storage_class }}
 {{- end }}
-  
+{{- end }} 
 {{- end }} 
